# rustigo

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml  tiles.blend
.github/workflows/: release.yaml  rust.yaml  rust.yml
server/: Cargo.toml
server/site/: board.html  index.html
server/site/images/: favicon.afphoto
server/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
site/: index.html
src/: board.rs  main.rs
templates/: board.html.hbs  join.html.hbs
