[package]
name = "rustigo"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
conv = "*"
custom_derive = "*"
env_logger = "*"
logger = "*"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_codegen = "0.5.0-rc.2"
serde = "*"
serde_derive = "*"
ws = "*"
