[package]
name = "rustigo"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
env_logger = "*"
logger = "*"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket-include-static-resources = { git = "https://github.com/j16r/rocket-include-static-resources.git" }
# rocket-include-static-resources = "*"
rocket_codegen = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "*"
serde_derive = "*"
serde_repr = "*"
ws = "*"

[dependencies.uuid]
version = "1"
features = ["v4"]
