[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["John Barker <jebarker@gmail.com>"]
resolver = "2"
license = "GPL-3.0-or-later"
description = "Play Go online"
homepage = "go.j16r.net"
repository = "https://github.com/j16r/rustigo"

[dependencies]
server = { path = "../server" }
shuttle-service = { version = "0.7.2", features = ["web-rocket"] }
